# cannon-wrapper

./: CMakeLists.txt  README.md  __init__.py  bindings.cpp  build_edsdk.bat  camera.py  camera_test.py  cannon_wrapper.py  demo.py  exceptions.py  pyproject.toml  setup.py  simple_demo.py  utils.py
api/: __init__.py  camera.py  live_view.py  settings.py
canon_gui/: README.md  README_MOCK.md  main.py  requirements.txt
canon_gui/app/: __init__.py
canon_gui/app/camera/: __init__.py  camera_manager.py  live_view.py  settings.py
canon_gui/app/ui/: __init__.py  control_panel.py  live_view_widget.py  main_window.py  settings_dialog.py
canon_gui/app/utils/: __init__.py  config.py  image_processing.py
canon_gui/app/utils/mocks/: __init__.py  cannon_wrapper.py
core/: __init__.py  binding_helpers.py  bindings.py  image_utils.py
edsdk/: pyvenv.cfg
edsdk/Scripts/: activate  activate.bat
examples/: __init__.py  basic_camera.py  live_view.py  save_image.py
lib/EDSDK/Header/: EDSDKTypes.h
